--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header -->
     <header class="sticky top-0 z-50 bg-white py-3.5 shadow-md">
       <div class="flex flex-row max-w-6xl mx-auto justify-between items-center px-4 md:px-0">
-        <img src="./src/images/logo.png" alt="Logo Nusantara Rasa - Restoran Kuliner Indonesia" class="w-28 md:w-auto" />
+        <img src="./src/images/logo.svg" alt="Logo Nusantara Rasa - Restoran Kuliner Indonesia" class="w-28 md:w-auto" />
 
         <!-- Mobile Menu Button -->
         <button id="menu-btn" class="block md:hidden focus:outline-none hover:cursor-pointer">
